--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<link rel="stylesheet" href="css/style.css">
+<!DOCTYPE html>
+<html lang="zh-TW">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>工作行事曆</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
     <div id="current-day-info" class="color">
         <h1 id="app-name-landscape" class="off-color center default-cursor">
             Calendar
@@ -126,6 +136,7 @@
                 <div id="color-options">
                     <div class="color-option">
                         <div class="color-preview" id="blue" style="background-color: #1B19CD;">
+                            <!-- <i class="fas fa-check checkmark"></i> -->
                         </div>
                         <h5>Blue</h5>
                     </div>
@@ -211,3 +222,6 @@
         </div>
     </div>
     <script src="js/app.js"></script>
+</body>
+
+</html>
